--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -259,41 +259,41 @@ h1,h2,h3,h4,h5,h6,a,ul,li{
 	width: 100%;
 	z-index: 999999999999;
 	background-color: #FCF5E4;
-	background-image: url(img/preloader.gif);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/preloader.gif);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
 
 /* Body Background List */
 body.the-heart-default-body {
-	background-image: url(img/the-heart-body-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/the-heart-body-bg.png);
 }
 body.the-heart-journal-body-bg {
-	background-image: url(img/journal-body-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/journal-body-bg.png);
 }
 body.the-heart-timeline-body {
-	background-image: url(img/timeline-body-bg.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/timeline-body-bg.jpg);
 }
 body.the-heart-rsvp-body {
-	background-image: url(img/rsvp-body-bg.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/rsvp-body-bg.jpg);
 }
 body.the-heart-his-story-body {
-	background-image: url(img/his-storey-bg.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/his-storey-bg.jpg);
 }
 body.the-heart-her-story-body {
-	background-image: url(img/her-Story-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/her-Story-bg.png);
 }
 body.the-heart-gift-registry-body {
-	background-image: url(img/gift-registry-body.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/gift-registry-body.jpg);
 }
 body.the-heart-engagement-body {
-	background-image: url(img/engagement-storey-body.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/engagement-storey-body.png);
 }
 body.the-heart-bridemaid-body {
-	background-image: url(img/bride-maid-body-bg.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/bride-maid-body-bg.jpg);
 }
 body.the-heart-groomsman-body {
-	background-image: url(img/groomsman-body-bg.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/groomsman-body-bg.jpg);
 }
 
 /* Graet Vides Fonts */
@@ -545,7 +545,7 @@ header.the-heart-menu-and-logo-section.sticky-menu ul.dropdown li a{
 	left: 0;
 	height: 230px;
 	width: 100%;
-	background-image: url(img/floral-top.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/floral-top.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
@@ -555,7 +555,7 @@ header.the-heart-menu-and-logo-section.sticky-menu ul.dropdown li a{
 	top: inherit;
 	bottom: 0;
 	height: 249px;
-	background-image: url(img/floral-bottom.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/floral-bottom.png);
 }
 .the-heart-welcome-content {
 	position: relative;
@@ -588,12 +588,12 @@ header.the-heart-menu-and-logo-section.sticky-menu ul.dropdown li a{
 	left: 0;
 	height: 20px;
 	width: 100%;
-	background-image: url(img/floeal-txt-bg-1.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/floeal-txt-bg-1.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
 .the-heart-floral-txt:after {
-	background-image: url(img/floeal-txt-bg-2.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/floeal-txt-bg-2.png);
 	top: inherit;
 	bottom: -20px;
 }
@@ -1294,7 +1294,7 @@ canvas {
 ========================================================================================================================*/
 
 .the-heart-introduction-wraper {
-	background-image: url(img/introduction-floral-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/introduction-floral-bg.png);
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -1344,8 +1344,8 @@ canvas {
 
 
 .the-heart-memoragble-days-img img {
-	-webkit-mask-image: url(img/mask-img.png);
-	mask-image: url(img/mask-img.png);
+	-webkit-mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/mask-img.png);
+	mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/mask-img.png);
 	-webkit-mask-repeat: no-repeat;
 	mask-repeat: no-repeat;
 	-webkit-mask-size: 60%;
@@ -1393,7 +1393,7 @@ canvas {
 	left: 50%;
 	height: 100%;
 	width: 61px;
-	background-image: url(img/memorable-days-spearetor.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/memorable-days-spearetor.png);
 	background-size: 50%;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -1440,7 +1440,7 @@ canvas {
 	left: 0;
 	height: 115px;
 	width: 100%;
-	background-image: url(img/paper-effect--top.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/paper-effect--top.png);
 	background-repeat: repeat-x;
 	background-position: top center;
 	background-size: contain;
@@ -1449,7 +1449,7 @@ canvas {
 .the-heart-paper-effect-bg:after {
 	top: inherit;
 	bottom: 0;
-	background-image: url(img/paper-effect--bottom.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/paper-effect--bottom.png);
 	background-position: bottom center;
 }
 .the-heart-wdding-venu-content {
@@ -1481,7 +1481,7 @@ canvas {
 	left: 0;
 	width: 100%;
 	height: 21px;
-	background-image: url(img/weddin-venue-floral.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/weddin-venue-floral.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: 50%;
@@ -1610,7 +1610,7 @@ canvas {
 	width: calc(100% - 136px);
 	margin: 0 auto;
 	padding: 50px 80px;
-	background-image: url(img/attending-form-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/attending-form-bg.png);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center center;
@@ -1725,16 +1725,16 @@ canvas {
 	padding: 100px 0;
 }
 #the-heart-gallery .the-heart-paper-effect-bg:before {
-	background-image: url(img/paper-effect--top-gallery.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/paper-effect--top-gallery.png);
 }
 
 #the-heart-gallery .the-heart-paper-effect-bg:after {
-	background-image: url(img/paper-effect--bottom-gallery.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/paper-effect--bottom-gallery.png);
 }
 
 .the-heart-single-gallery img{
-	-webkit-mask-image: url(img/gallery-mask.png);
-	mask-image: url(img/gallery-mask.png);
+	-webkit-mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/gallery-mask.png);
+	mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/gallery-mask.png);
 	-webkit-mask-repeat: no-repeat;
 	mask-repeat: no-repeat;
 	-webkit-mask-size: 100% 100%;
@@ -1813,8 +1813,8 @@ canvas {
 	margin-top: 20px;
 }
 .the-heart-single-journal figure img {
-	mask-image: url(img/journal-img-mask.png);
-	-webkit-mask-image: url(img/journal-img-mask.png);
+	mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/journal-img-mask.png);
+	-webkit-mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/journal-img-mask.png);
 	mask-repeat: no-repeat;
 	-webkit-mask-repeat: no-repeat;
 	mask-position: center center;
@@ -1862,7 +1862,7 @@ canvas {
 	left: 0;
 	width: 100%;
 	height: 13px;
-	background-image: url(img/journal-heading-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/journal-heading-bg.png);
 	background-repeat: no-repeat;
 	background-size: 50% 100%;
 	background-position: left center;
@@ -2105,7 +2105,7 @@ uncomment this part if you haven't added this code anywhere else
 	transform: translateX(-50%);
 	height: 37px;
 	width: 398px;
-	background-image: url(img/time-line-post-separetor.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/time-line-post-separetor.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: contain;
@@ -2165,8 +2165,8 @@ uncomment this part if you haven't added this code anywhere else
 	text-align: left;
 }
 .the-heart-single-groomsman figure img {
-	-webkit-mask-image: url(img/groomsman-mask.png);
-		mask-image: url(img/groomsman-mask.png);
+	-webkit-mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/groomsman-mask.png);
+		mask-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/groomsman-mask.png);
 	-webkit-mask-repeat: no-repeat;
 		mask-repeat: no-repeat;
 	-webkit-mask-size: 100% 100%;
@@ -2264,7 +2264,7 @@ uncomment this part if you haven't added this code anywhere else
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background-image: url(img/gift-shop-logo-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/gift-shop-logo-bg.png);
 	background-size: 100% 100%;
 	z-index: -1;
 }
@@ -2351,13 +2351,13 @@ uncomment this part if you haven't added this code anywhere else
 	left: 0;
 	width: 100%;
 	height: 49px;
-	background-image: url(img/accommodation-post-bg-top.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/accommodation-post-bg-top.jpg);
 	background-repeat: repeat-x;
 	background-size: contain;
 	background-position: top center;
 }
 .the-heart-accommodation-post-bg:after {
-	background-image: url(img/accommodation-post-bg-bottom.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/accommodation-post-bg-bottom.jpg);
 	top: inherit;
 	bottom: 0;
 	left: 0;
@@ -2412,7 +2412,7 @@ uncomment this part if you haven't added this code anywhere else
 
 .the-heart-attending-form-2 {
 	text-align: center;
-	background-image: url(img/attending-form-bg-inner.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/attending-form-bg-inner.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -2556,7 +2556,7 @@ uncomment this part if you haven't added this code anywhere else
 }
 .the-heart-single-married-time p {
 	margin: 0;
-	background-image: url(img/married-time-bg.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/married-time-bg.png);
 	width: 200px;
 	height: 51px;
 	background-position: center center;
@@ -2575,7 +2575,7 @@ uncomment this part if you haven't added this code anywhere else
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: top center;
-	background-image: url(img/single-blog-post-paper-bg.jpg);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/single-blog-post-paper-bg.jpg);
 	height: 545px;
 	width: 100vw;
 	margin-left: -50vw;
@@ -2594,7 +2594,7 @@ uncomment this part if you haven't added this code anywhere else
 	left: 0;
 	width: 100%;
 	height: 45px;
-	background-image: url(img/journal-post-paper-top.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/journal-post-paper-top.png);
 	background-repeat: repeat-x;
 	background-size: contain;
 	background-position: top center;
@@ -2602,7 +2602,7 @@ uncomment this part if you haven't added this code anywhere else
 .the-heart-blog-post-image:after {
 	top: inherit;
 	bottom: 0;
-	background-image: url(img/journal-post-paper-bottom.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/journal-post-paper-bottom.png);
 	background-position: bottom center;
 	height: 42px;
 }
@@ -2638,7 +2638,7 @@ uncomment this part if you haven't added this code anywhere else
 	content: "";
 	bottom: 0;
 	left: 0;
-	background-image: url(img/jurnal-post-separetor.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/jurnal-post-separetor.png);
 	width: 100%;
 	height: 38px;
 	background-repeat: no-repeat;
@@ -2716,7 +2716,7 @@ uncomment this part if you haven't added this code anywhere else
 	content: "";
 	bottom: 0;
 	left: 0;
-	background-image: url(img/jurnal-post-separetor.png);
+	background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/jurnal-post-separetor.png);
 	width: 100%;
 	height: 38px;
 	background-repeat: no-repeat;
