--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -83,6 +83,8 @@ body {
 	background-repeat: repeat;
 	background-position: center center;
 	background-size: 100%;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 iframe{
